--- a/Resources/UserGuides/managingTheMainForm.html
+++ b/Resources/UserGuides/managingTheMainForm.html
@@ -2,78 +2,9 @@
 <html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Меню</title>
+    <title>Главная форма</title>
+	<link rel="stylesheet" href="style.css" type="text/css">
 </head>
-
-<style>
-    body {
-        margin: 0; /* Убираем отступы */
-    }
-    .parent {
-        /*margin: 20%;  Отступы вокруг элемента */
-        /*background: #fd0;  Цвет фона */
-        padding: 10px; /* Поля вокруг текста */
-        /*width: 30%
-        width: 150px;
-        height: 300px;*/
-        width: 910px;
-    }
-    .child {
-         /*border: 2px solid #666; Параметры рамки */
-        padding: 10px; /* Поля вокруг текста */
-        margin: 3px 10px 3px 10px; /* Отступы вокруг */
-        /*width: 300px;*/
-        width: 85%;
-    }
-    .button {
-       /*border: 8px solid #000fff;    Параметры рамки */
-        padding: 10px; /* Поля вокруг текста */
-        margin: 3px 10px 3px 10px; /* Отступы вокруг */
-        border: none;
-        width: 90%;
-		background:#f0f0f0; 
-        <!--float:left;-->
-    }
-	.button:hover {
-    	background:#e0e0e0;  
-    }
-	.upButton{     
-		padding: 10px; /* Поля вокруг текста */
-        margin: 3px 10px 3px 10px; /* Отступы вокруг */
-        width: 10%;
-		background:#ffffff; 
-		position: fixed;
-		text-align:center;
-		left: 27%;
-		bottom: 15px;
-	}
-    #line_block {
-        width:600px;
-        background:#ffffff;
-        float:left;
-        margin: 0 15px 15px 0;
-        text-align:center;
-        padding: 30px;
-        font-size: 14pt;
-        text-indent: 40px;
-        }
-    #line_block2 {
-        width:200px; 
-        float:left;
-        margin: 0 15px 15px 0;
-        text-align:center;
-        padding: 10px;
-        }
-	.Image {
-        width: 100%;
-		border: none;
-		height: auto;
-		display: block;
-        }
-</style>
-
- 
-
 
 <body bgcolor="#F0F0F0">
 <div align="center"  >
@@ -89,50 +20,52 @@
             <button class="button" onclick="window.location.href = 'trafficLightsSettings.html';">О настройке светофора</button>
             <button class="button" onclick="window.location.href = 'flowIntensitySettings.html';">О выборе интенсивности потока</button>
             <button class="button" onclick="window.location.href = 'speedSettings.html';">О выборе распределения скоростного режима</button>
-            <button class="button" onclick="window.location.href = 'managingTheMainForm.html';">О управлении главной формой</button>
+            <button class="button" onclick="window.location.href = 'managingTheMainForm.html';">Об управлении главной формой</button>
             <button class="button" onclick="window.location.href = 'systemInfo.html';">О системе и авторах</button>
         </div>
         <div id="line_block">
             <h2>Управление главной формой</h2>
-            <p align="justify">Ниже представлена главная форма проекта</p>
+            <p align="justify">Ниже представлена главная форма проекта.</p>
             <img class="Image" src="Images/главная форма.jpg">
             <p align="center">Рисунок 1 — Главная форма проекта</p><br>
             <h3>Основное меню управления моделированием</h3>
             <p align="justify">На этой форме визуализируется транспортный поток.</p>
-            <p align="justify">Чтобы начать моделирование намите кнопку 'Старт'</p>
-            <p align="justify">Чтобы приостановить моделирование намите кнопку 'Пауза'</p>
-            <p align="justify">Чтобы остановить моделирование и открыть настроечный экран нажмите 'Остановить'</p>
+            <p align="justify">Чтобы начать моделирование, следует нажать на кнопку 'Старт.'</p>
+            <p align="justify">Чтобы приостановить моделирование, следует нажать на кнопку 'Пауза'.</p>
+            <p align="justify">Чтобы остановить моделирование и открыть предыдущее окно настройки, следует нажать на кнопку 'Остановить'.</p>
             <h3>Управление головным автомобилем</h3>
             <p align="justify">
-                Чтобы изменить скорость головного автомобиля, данная функция доступна в тоннеле, необходимо кликом выбрать авто,
-                после чего он подсветится красным цветом, а затем задать желаемую скорость с помощью ползунка.
+                Чтобы изменить скорость головного автомобиля, — данная функция доступна в тоннеле — необходимо кликнуть на один из автомобилей, а затем задать желаемую скорость с помощью ползунка.
+				Выбранный автомобиль изменит цвет на красный. Чтобы снять выделение с автомобилия, достаточно кликнуть по пустому пространству.
             </p>
             <img class="Image" src="Images/управление головным авто.jpg">
             <p align="center">Рисунок 2 — Управление скоростью головного автомобиля</p><br>
             <h3>Управление знаками дорожного движения</h3>
             <p align="justify">
-                Чтобы на дороге ставить/удалять знаки, необходимо нажать кнопку 'Редактировать ЗДД', данная функция есть на дороге и автостраде,
-                после чего выбрать желаемое действие из предложенных вариантов. В случае выбора ограничения скорости,
-                надо настроить ползунком желаемое ограничение скорости. После редактирования ЗДД, надо нажать кнопку
+                Чтобы редактировать ЗДД, необходимо нажать на кнопку 'Редактировать ЗДД' — данная функция доступна на дороге и автостраде —
+                после чего выбрать желаемое действие из предложенных вариантов. В случае выбора ограничения скорости
+                надо настроить ползунком желаемое ограничение скорости. После редактирования ЗДД следует нажать на кнопку
                 'Старт', чтобы продолжить процесс моделирования.
             </p>
             <p align="justify">На изображении ниже показаны элементы управления, используемые для установки знаков.</p>
-            <p align="justify">1 — Кнопка открытия меню знаков.</p>
-            <p align="justify">2 — Меню с выбором действия, поставить ограничение/отменить ограничение/удалить знак.</p>
-            <p align="justify">3 — Поставленные знаки.</p>
-            <p align="justify">4 — Курсор удаления знака, при клике по поставленному знаку, удаляет его.</p>
+            <p align="justify">1 — кнопка открытия меню знаков;</p>
+            <p align="justify">2 — меню с выбором действия, поставить ограничение/отменить ограничение/удалить знак;</p>
+            <p align="justify">3 — установленные знаки;</p>
+            <p align="justify">4 — курсор удаления знака, при нажатии на установленный знак, удаляет его.</p> 
             <img class="Image" src="Images/расстановка знаков.jpg">
             <p align="center">Рисунок 3 — Расстановка дорожных знаков</p><br>
-            <p align="justify">Ниже показана работа знаков ограничения скорости, машины сбавляют скорость, находясь под действием знака и разгоняются, после знака отмены ограничений.</p>
+            <p align="justify">Ниже показана работа знаков ограничения скорости.</p>
             <img class="Image" src="Images/работа знаков ограничения скорости.jpg">
-            <p align="center">Рисунок 4 — Работа можели со знаками ограничения скорости</p><br>
+            <p align="center">Рисунок 4 — Процесс моделирования с расставленными ЗДД</p><br>
+			<p align="justify"> Машины сбавляют скорость, если пересекли линию знака ограничения скорости, и разгоняются после пересечения линии знака отмены ограничений.
+			Также видно, что две машины, приблизившись к впереди идущим автомобилям, пошли на опережение, перестроившись на свободные полосы.</p>
 
         </div>
         </div>
 </div>
 
 <div id="upButton">
- <button class="upButton" onclick="window.location.href = '#';">Вверх</button>
+    <img  src="Images/up-arrow.png" class="upButtonI" onclick="window.location.href = '#';">
 </div>
 
 
