--- a/Resources/UserGuides/countOfRoadsInfo.html
+++ b/Resources/UserGuides/countOfRoadsInfo.html
@@ -3,67 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Настройка количества полос</title>
+	<link rel="stylesheet" href="style.css" type="text/css">
 </head>
-
-<style>
-    body {
-        margin: 0; /* Убираем отступы */
-    }
-    .parent {
-        /*margin: 20%;  Отступы вокруг элемента */
-        /*background: #fd0;  Цвет фона */
-        padding: 10px; /* Поля вокруг текста */
-        /*width: 30%
-        width: 150px;
-        height: 300px;*/
-        width: 910px;
-    }
-    .child {
-         /*border: 2px solid #666; Параметры рамки */
-        padding: 10px; /* Поля вокруг текста */
-        margin: 3px 10px 3px 10px; /* Отступы вокруг */
-        /*width: 300px;*/
-        width: 85%;
-    }
-    .button {
-       /*border: 8px solid #000fff;    Параметры рамки */
-        padding: 10px; /* Поля вокруг текста */
-        margin: 3px 10px 3px 10px; /* Отступы вокруг */
-        border: none;
-        width: 90%;
-		background:#f0f0f0; 
-        <!--float:left;-->
-    }
-	.button:hover {
-    	background:#e0e0e0;  
-    }
-    #line_block {
-        width:600px;
-        background:#ffffff;
-        float:left;
-        margin: 0 15px 15px 0;
-        text-align:center;
-        padding: 30px;
-        font-size: 14pt;
-        text-indent: 40px;
-        }
-    #line_block2 {
-        width:200px;
-        /*background:#ffffff;*/
-        float:left;
-        margin: 0 15px 15px 0;
-        text-align:center;
-        padding: 10px;
-        }
-	.Image {
-        width: 100%;
-		border: none;
-		height: auto;
-		display: block;
-        }
-</style>
-
- 
 
 
 <body bgcolor="#F0F0F0">
@@ -82,25 +23,25 @@
             <button class="button" onclick="window.location.href = 'trafficLightsSettings.html';">О настройке светофора</button>
             <button class="button" onclick="window.location.href = 'flowIntensitySettings.html';">О выборе интенсивности потока</button>
             <button class="button" onclick="window.location.href = 'speedSettings.html';">О выборе распределения скоростного режима</button>
-            <button class="button" onclick="window.location.href = 'managingTheMainForm.html';">О управлении главной формой</button>
+            <button class="button" onclick="window.location.href = 'managingTheMainForm.html';">Об управлении главной формой</button>
             <button class="button" onclick="window.location.href = 'systemInfo.html';">О системе и авторах</button>
         </div>
         <div id="line_block">
             <h2>Настройка количества полос движения</h2>
-            <p align="justify">Ниже представлена форма выбора количества полос движения</p>
+            <p align="justify">Ниже представлена форма для выбора типа движения и количества полос движения:</p>
             <img class="Image" src="Images/форма настройки количества полос.jpg">
-            <p align="center">Рисунок 1 — Форма выбора количества полос на дороге</p><br>
+            <p align="center">Рисунок 1 — Форма настройки параметров дороги</p><br>
             <p align="justify">
                 На форме следует выбрать количество направлений движения
                 и с помощью ползунков задать количество полос в каждом направлении.
             </p>
             <p align="justify">
                 Возможность выбора количества полос для встречного движения
-                появится только в случае, если количество норавлений движения равно двум.
+                появится только в случае, если количество направлений движения равно двум.
             </p>
             <p align="justify">
-                При нажатии кнопки 'Назад' текущее окно закроется и откроется
-                форма настройки типа дороги. При нажатии кнопки 'Далее' будет открыто окно выбора распределения интенсивности потока автомобилей.
+                При нажатии на кнопку 'Назад' текущее окно закроется и откроется
+                форма настройки типа дороги. При нажатии на кнопку 'Далее' будет открыто окно для выбора распределения интенсивности потока автомобилей.
             </p> 
         </div>
     </div>
