--- a/Resources/UserGuides/flowIntensitySettings.html
+++ b/Resources/UserGuides/flowIntensitySettings.html
@@ -3,77 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Настройка интенсивности потока</title>
+	<link rel="stylesheet" href="style.css" type="text/css">
 </head>
-
-<style>
-    body {
-        margin: 0; /* Убираем отступы */
-    }
-    .parent {
-        /*margin: 20%;  Отступы вокруг элемента */
-        /*background: #fd0;  Цвет фона */
-        padding: 10px; /* Поля вокруг текста */
-        /*width: 30%
-        width: 150px;
-        height: 300px;*/
-        width: 910px;
-    }
-    .child {
-         /*border: 2px solid #666; Параметры рамки */
-        padding: 10px; /* Поля вокруг текста */
-        margin: 3px 10px 3px 10px; /* Отступы вокруг */
-        /*width: 300px;*/
-        width: 85%;
-    }
-    .button {
-       /*border: 8px solid #000fff;    Параметры рамки */
-        padding: 10px; /* Поля вокруг текста */
-        margin: 3px 10px 3px 10px; /* Отступы вокруг */
-        border: none;
-        width: 90%;
-		background:#f0f0f0; 
-        <!--float:left;-->
-    }
-	.button:hover {
-    	background:#e0e0e0;  
-    }
-	.upButton{     
-		padding: 10px; /* Поля вокруг текста */
-        margin: 3px 10px 3px 10px; /* Отступы вокруг */
-        width: 10%;
-		background:#ffffff; 
-		position: fixed;
-		text-align:center;
-		left: 27%;
-		bottom: 15px;
-	}
-    #line_block {
-        width:600px;
-        background:#ffffff;
-        float:left;
-        margin: 0 15px 15px 0;
-        text-align:center;
-        padding: 30px;
-        font-size: 14pt;
-        text-indent: 40px;
-        }
-    #line_block2 {
-        width:200px; 
-        float:left;
-        margin: 0 15px 15px 0;
-        text-align:center;
-        padding: 10px;
-        }
-	.Image {
-        width: 100%;
-		border: none;
-		height: auto;
-		display: block;
-        }
-</style>
-
- 
-
 
 <body bgcolor="#F0F0F0">
 <div align="center"  >
@@ -89,50 +20,53 @@
             <button class="button" onclick="window.location.href = 'trafficLightsSettings.html';">О настройке светофора</button>
             <button class="button" onclick="window.location.href = 'flowIntensitySettings.html';">О выборе интенсивности потока</button>
             <button class="button" onclick="window.location.href = 'speedSettings.html';">О выборе распределения скоростного режима</button>
-            <button class="button" onclick="window.location.href = 'managingTheMainForm.html';">О управлении главной формой</button>
+            <button class="button" onclick="window.location.href = 'managingTheMainForm.html';">Об управлении главной формой</button>
             <button class="button" onclick="window.location.href = 'systemInfo.html';">О системе и авторах</button>
         </div>
         <div id="line_block">
             <h2>Настройка интенсивности потока</h2>
-            <p align="justify">Ниже поедставлены изображения формы, по настройке интенсивности автомобильного потока.</p>
+            <p align="justify">Ниже представлены изображения формы для настройки интенсивности транспортного потока.</p>
             <img class="Image" src="Images/форма настройки интенсивности потока.jpg">
-            <p align="center">Рисунок 1 — Форма настройки интенсивности потока с детерминированной величиной</p><br>
+            <p align="center">Рисунок 1 — Форма для настройки параметра детерминированного транспортного потока </p><br>
 
             <img class="Image" src="Images/равномерная интенсивность.jpg">
-            <p align="center">Рисунок 2 — Форма настройки интенсивности потока с равномерным законом распределения</p><br>
+            <p align="center">Рисунок 2 — Форма для настройки параметров равномерного транспортного потока</p><br>
 
             <img class="Image" src="Images/нормальная интенсивность.jpg">
-            <p align="center">Рисунок 3 — Форма настройки интенсивности потока с нормальным законом распределения</p><br>
+            <p align="center">Рисунок 3 — Форма для настройки параметров нормального транспортного потока</p><br>
 
             <img class="Image" src="Images/показательная интенсивность.jpg">
-            <p align="center">Рисунок 4 — Форма настройки интенсивности потока с показательным законом распределения</p><br>
+            <p align="center">Рисунок 4 — Форма  для настройки параметра экспоненциального транспортного потока</p><br>
 
             <p align="justify">
                 На форме следует выбрать желаемый тип распределения
-                для потока машин.
+                транспортного потока.
             </p>
             <p align="justify">
-                После выбора типа распределения станут доступны ползунки
+                После выбора типа распределения станут доступны ползунки для
                 задания параметров случайной/постоянной величины.
             </p>
             <p align="justify">
-                При нажатии кнопки 'Назад' текущее окно закроется и откроется форма выбора количества полос
-                или настройка светофорной фазы. При нажатии кнопки 'Далее' будет открыто окно настройки скоростного режима.
+                При нажатии на кнопку 'Назад' текущее окно закроется и откроется форма для выбора количества полос
+                или настройка светофорной фазы. При нажатии на кнопку 'Далее' будет открыто окно для настройки скоростного режима.
             </p>
             <p align="justify">
-                Для примера посмотрим на разную интенсивностьь потока автомобилей. Ниже показаны два изображения,
-                на рисунке 5 показан поток автомобилей генерируемых с периодом 0.2 с, на 6 рисунке, период генерации 1 с.
+                Для примера рассмотрим разную интенсивность потока автомобилей. На рисунке 5 показан поток автомобилей, генерируемых с периодом 0.2 с.
             </p>
             <img class="Image" src="Images/большой поток авто.jpg">
             <p align="center">Рисунок 5 — Большая интенсивность потока</p><br>
+			<p align="justify">
+                На 6 рисунке период генерации автомобилей составляет 1 с.
+            </p>
             <img class="Image" src="Images/малый поток авто.jpg">
             <p align="center">Рисунок 6 — Малая интенсивность потока</p><br>
         </div>
         </div>
+		
 </div>
 
 <div id="upButton">
- <button class="upButton" onclick="window.location.href = '#';">Вверх</button>
+ <img  src="Images/up-arrow.png" class="upButtonI" onclick="window.location.href = '#';">
 </div>
 
 </body>
