--- a/Resources/UserGuides/speedSettings.html
+++ b/Resources/UserGuides/speedSettings.html
@@ -3,77 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Настройки скорости</title>
+	<link rel="stylesheet" href="style.css" type="text/css">
 </head>
-
-<style>
-    body {
-        margin: 0; /* Убираем отступы */
-    }
-    .parent {
-        /*margin: 20%;  Отступы вокруг элемента */
-        /*background: #fd0;  Цвет фона */
-        padding: 10px; /* Поля вокруг текста */
-        /*width: 30%
-        width: 150px;
-        height: 300px;*/
-        width: 910px;
-    }
-    .child {
-         /*border: 2px solid #666; Параметры рамки */
-        padding: 10px; /* Поля вокруг текста */
-        margin: 3px 10px 3px 10px; /* Отступы вокруг */
-        /*width: 300px;*/
-        width: 85%;
-    }
-    .button {
-       /*border: 8px solid #000fff;    Параметры рамки */
-        padding: 10px; /* Поля вокруг текста */
-        margin: 3px 10px 3px 10px; /* Отступы вокруг */
-        border: none;
-        width: 90%;
-		background:#f0f0f0; 
-        <!--float:left;-->
-    }
-	.button:hover {
-    	background:#e0e0e0;  
-    }
-	.upButton{     
-		padding: 10px; /* Поля вокруг текста */
-        margin: 3px 10px 3px 10px; /* Отступы вокруг */
-        width: 10%;
-		background:#ffffff; 
-		position: fixed;
-		text-align:center;
-		left: 27%;
-		bottom: 15px;
-	}
-    #line_block {
-        width:600px;
-        background:#ffffff;
-        float:left;
-        margin: 0 15px 15px 0;
-        text-align:center;
-        padding: 30px;
-        font-size: 14pt;
-        text-indent: 40px;
-        }
-    #line_block2 {
-        width:200px; 
-        float:left;
-        margin: 0 15px 15px 0;
-        text-align:center;
-        padding: 10px;
-        }
-	.Image {
-        width: 100%;
-		border: none;
-		height: auto;
-		display: block;
-        }
-</style>
-
- 
-
 
 <body bgcolor="#F0F0F0">
 <div align="center"  >
@@ -89,42 +20,42 @@
             <button class="button" onclick="window.location.href = 'trafficLightsSettings.html';">О настройке светофора</button>
             <button class="button" onclick="window.location.href = 'flowIntensitySettings.html';">О выборе интенсивности потока</button>
             <button class="button" onclick="window.location.href = 'speedSettings.html';">О выборе распределения скоростного режима</button>
-            <button class="button" onclick="window.location.href = 'managingTheMainForm.html';">О управлении главной формой</button>
+            <button class="button" onclick="window.location.href = 'managingTheMainForm.html';">Об управлении главной формой</button>
             <button class="button" onclick="window.location.href = 'systemInfo.html';">О системе и авторах</button>
         </div>
         <div id="line_block">
             <h2>Настройка скоростного режима</h2>
-            <p align="justify">Ниже роедставлены изображения формы, по настройке скоростного режима потока автомобилей.</p>
+            <p align="justify">Ниже представлены изображения формы для настройки скоростного режима автомобилей.</p>
             <img class="Image" src="Images/детерминированная скорость.jpg">
-            <p align="center">Рисунок 1 — Форма настройки скорости потока с детерминированной величиной</p><br>
+			<p align="center">Рисунок 1 — Форма для настройки параметра детерминированного скоростного режима</p><br>
 
             <img class="Image" src="Images/равномерная скорость.jpg">
-            <p align="center">Рисунок 2 — Форма настройки скорости потока с равномерным законом распределения</p><br>
+            <p align="center">Рисунок 2 — Форма для настройки параметров равномерного скоростного режима</p><br>
 
             <img class="Image" src="Images/нормальная скорость.jpg">
-            <p align="center">Рисунок 3 — Форма настройки скорости потока с нормальным законом распределения</p><br>
+            <p align="center">Рисунок 3 — Форма для настройки параметров нормального скоростного режима</p><br>
 
             <img class="Image" src="Images/показательная скорость.jpg">
-            <p align="center">Рисунок 4 — Форма настройки скорости потока с показательным законом распределения</p><br>
+            <p align="center">Рисунок 4 — Форма  для настройки параметра экспоненциального скоростного режима</p><br>
 
             <p align="justify">
                 На форме следует выбрать желаемый тип распределения
-                для скорости машин.
+                скоростного режима автомобилей.
             </p>
             <p align="justify">
                 После выбора типа распределения станут доступны ползунки
-                задания параметров случайной/постоянной величины.
+                 для задания параметров случайной/постоянной величины.
             </p>
             <p align="justify">
-                При нажатии кнопки 'Назад' текущее окно закроется и откроется
-                форма настройки интенсивности потока. При нажатии кнопки 'Далее' будет открыта главная форма программы.
+                При нажатии на кнопку 'Назад' текущее окно закроется и откроется
+                форма для настройки интенсивности транспортного потока. При нажатии на кнопку 'Далее' будет открыта главная форма программы.
             </p>
 
         </div>
         </div>
 </div>
 <div id="upButton">
-    <button class="upButton" onclick="window.location.href = '#';">Вверх</button>
+    <img  src="Images/up-arrow.png" class="upButtonI" onclick="window.location.href = '#';">
 </div>
 
 </body>
